# ros2_for_beginners

./: .gitignore  README.md
action_challenge_cpp/: CMakeLists.txt  package.xml
action_challenge_cpp/src/: move_one_axis_client.cpp  move_one_axis_server.cpp  move_one_axis_server_lifecycle.cpp
action_challenge_py/: package.xml  setup.cfg  setup.py
action_challenge_py/action_challenge_py/: move_one_axis_client.py  move_one_axis_server.py  move_one_axis_server_lifecycle.py
actions_cpp/: CMakeLists.txt  package.xml
actions_cpp/src/: count_until_client.cpp  count_until_server.cpp  count_until_server_queue_goals.cpp
actions_py/: package.xml  setup.py
actions_py/actions_py/: count_until_client.py  count_until_server.py
components_cpp/: CMakeLists.txt
components_cpp/include/components_cpp/: node1.hpp  node2.hpp  number_publisher.hpp
components_cpp/src/: number_publisher.cpp
components_py/: setup.py
components_py/components_py/: node1.py  node2.py
executors_cpp/src/: multi_threaded_executor.cpp  single_threaded_executor.cpp
executors_py/executors_py/: multi_threaded_executor.py  number_publisher.py  single_threaded_executor.py
final_project/: CMakeLists.txt  package.xml
final_project/include/final_project/: diff_drive_gz_manager.hpp  turtlesim_manager.hpp
final_project/src/: diff_drive_gz_manager.cpp  move_turtle_action_server.cpp  turtlesim_manager.cpp  turtlesim_manager_initial.cpp  turtlesim_manager_lifecycle.cpp
lifecycle_cpp/src/: number_publisher.cpp
lifecycle_py/: package.xml  setup.py
lifecycle_py/lifecycle_py/: move_robot_manager.py  number_publisher.py  number_publisher_original.py  turtlesim_move_manager.py
my_cpp_pkg/: CMakeLists.txt  package.xml
my_cpp_pkg/src/: add_two_ints_client.cpp  add_two_ints_client_no_oop.cpp  add_two_ints_server.cpp  battery.cpp  cpp_oop_template.cpp  hardware_status_publisher.cpp  led_panel.cpp  my_first_node.cpp  number_counter.cpp  number_publisher.cpp  reset_counter.cpp  robot_news_station.cpp  smartphone.cpp
my_py_pkg/: package.xml  setup.py
my_py_pkg/my_py_pkg/: add_two_ints_client.py  add_two_ints_client_no_oop.py  add_two_ints_server.py  battery.py  hardware_status_publisher.py  led_panel.py  my_first_node.py  number_counter.py  number_publisher.py  py_oop_template.py  reset_counter.py  robot_news_station.py  smartphone.py
my_robot_bringup/: CMakeLists.txt  package.xml
my_robot_bringup/config/: gz_bridge.yaml  gz_bridge_arm.yaml  number_app.yaml  station_app.yaml
my_robot_bringup/launch/: catch_all_app.launch.xml  catch_all_app_cpp.launch.xml  components.launch.py  lifecycle_challenge.xml  lifecycle_test.launch.py  lifecycle_test.launch.xml  my_robot_gazebo.launch.xml  my_robot_gz_action_components.launch.xml  number_app.launch.py  number_app.launch.xml  robot_action_components.launch.xml  robot_arm_gz.launch.xml  station_app.launch.xml  turtlesim_action_components.launch.xml
my_robot_description/: CMakeLists.txt  package.xml
my_robot_description/gz_worlds/: my_world.sdf
my_robot_description/launch/: display.launch.py  display.launch.xml  display_arm.launch.xml
my_robot_description/rviz/: my_robot.rviz  standalone_arm.rviz
my_robot_description/urdf/: arm.xacro  camera.xacro  common_properties.xacro  mobile_base.xacro  mobile_base_gz.xacro  my_robot.urdf.xacro  standalone_arm.urdf.xacro
my_robot_interfaces/: CMakeLists.txt  package.xml
my_robot_interfaces/action/: MoveOneAxis.action  MoveTurtle.action
my_robot_interfaces/msg/: LedPanelState.msg  TurtleLoc.msg  TurtleLocArray.msg
my_robot_interfaces/srv/: SetLed.srv
turtle_project_cpp_pkg/: CMakeLists.txt  package.xml
turtle_project_cpp_pkg/src/: turtle_controller.cpp  turtle_manager.cpp
turtle_project_py_pkg/: package.xml  setup.cfg  setup.py
turtle_project_py_pkg/turtle_project_py_pkg/: turtle_controller.py  turtle_manager.py
