<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_robot_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="exiew@todo.todo">exiew</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>my_py_pkg</exec_depend>
  <exec_depend>my_cpp_pkg</exec_depend>
  <exec_depend>turtlesim</exec_depend>
  <exec_depend>turtle_project_py_pkg</exec_depend>
  <exec_depend>turtle_project_cpp_pkg</exec_depend>
  <exec_depend>my_robot_description</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>lifecycle_py</exec_depend>
  <exec_depend>lifecycle_cpp</exec_depend>
  <exec_depend>final_project</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>my_robot_interfaces</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
